fix: spacing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,10 +19,6 @@ h1 {
   display: inline-block;
 }
 
-.base-layout {
-  padding: 0 1rem 1rem 1rem;
-}
-
 main, aside {
   padding-top: 1rem;
 }
